Lake Tahoe updates

--- a/vasp_converter.ipynb
+++ b/vasp_converter.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -240,18 +240,18 @@
     {
      "data": {
       "text/plain": [
-       "{'TiC': <pymatgen.io.vasp.outputs.Elfcar at 0x7fc9a258ed30>,\n",
-       " 'IrO2': <pymatgen.io.vasp.outputs.Elfcar at 0x7fc9a2531340>,\n",
-       " 'TaN': <pymatgen.io.vasp.outputs.Elfcar at 0x7fc9a258efa0>,\n",
-       " 'TiO2': <pymatgen.io.vasp.outputs.Elfcar at 0x7fc9a25791c0>,\n",
-       " 'MgSO4': <pymatgen.io.vasp.outputs.Elfcar at 0x7fc9a258a490>,\n",
-       " 'MnBr2': <pymatgen.io.vasp.outputs.Elfcar at 0x7fc9a25792e0>,\n",
-       " 'Mn3O4': <pymatgen.io.vasp.outputs.Elfcar at 0x7fc9a232efa0>,\n",
-       " 'Pt5Se4': <pymatgen.io.vasp.outputs.Elfcar at 0x7fc9a2579490>,\n",
-       " 'K2Si4O9': <pymatgen.io.vasp.outputs.Elfcar at 0x7fc9a2452f40>,\n",
-       " 'Al2S3': <pymatgen.io.vasp.outputs.Elfcar at 0x7fc9a2452b80>,\n",
-       " 'Fe2O3': <pymatgen.io.vasp.outputs.Elfcar at 0x7fc9a2496310>,\n",
-       " 'Eu2O3': <pymatgen.io.vasp.outputs.Elfcar at 0x7fc9a24b4130>}"
+       "{'TiC': <pymatgen.io.vasp.outputs.Elfcar at 0x7f1e52a924f0>,\n",
+       " 'IrO2': <pymatgen.io.vasp.outputs.Elfcar at 0x7f1e52a924c0>,\n",
+       " 'TaN': <pymatgen.io.vasp.outputs.Elfcar at 0x7f1e52aa85e0>,\n",
+       " 'TiO2': <pymatgen.io.vasp.outputs.Elfcar at 0x7f1e52aa8490>,\n",
+       " 'MgSO4': <pymatgen.io.vasp.outputs.Elfcar at 0x7f1e52d27ee0>,\n",
+       " 'MnBr2': <pymatgen.io.vasp.outputs.Elfcar at 0x7f1e5296de80>,\n",
+       " 'Mn3O4': <pymatgen.io.vasp.outputs.Elfcar at 0x7f1e528e49d0>,\n",
+       " 'Pt5Se4': <pymatgen.io.vasp.outputs.Elfcar at 0x7f1e52a925b0>,\n",
+       " 'K2Si4O9': <pymatgen.io.vasp.outputs.Elfcar at 0x7f1e528e4dc0>,\n",
+       " 'Al2S3': <pymatgen.io.vasp.outputs.Elfcar at 0x7f1e52ab2d60>,\n",
+       " 'Fe2O3': <pymatgen.io.vasp.outputs.Elfcar at 0x7f1e52ab2e80>,\n",
+       " 'Eu2O3': <pymatgen.io.vasp.outputs.Elfcar at 0x7f1e528f6760>}"
       ]
      },
      "execution_count": 8,
@@ -262,6 +262,43 @@
    "source": [
     "elfcar_dict"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NotImplementedError",
+     "evalue": "Unable to automatically determine as_dict format from class. MSONAble requires all args to be present as either self.argname or self._argname, and kwargs to be present undera self.kwargs variable to automatically determine the dict format. Alternatively, you can implement both as_dict and from_dict.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m~/miniconda3/envs/scan/lib/python3.8/site-packages/monty/json.py\u001b[0m in \u001b[0;36mas_dict\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    136\u001b[0m                 \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 137\u001b[0;31m                     \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    138\u001b[0m                 \u001b[0;32mexcept\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Elfcar' object has no attribute 'poscar'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m~/miniconda3/envs/scan/lib/python3.8/site-packages/monty/json.py\u001b[0m in \u001b[0;36mas_dict\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    139\u001b[0m                     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 140\u001b[0;31m                         \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"_\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    141\u001b[0m                     \u001b[0;32mexcept\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Elfcar' object has no attribute '_poscar'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-2d871576c632>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0melfcar_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'TiC'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/miniconda3/envs/scan/lib/python3.8/site-packages/monty/json.py\u001b[0m in \u001b[0;36mas_dict\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    140\u001b[0m                         \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"_\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    141\u001b[0m                     \u001b[0;32mexcept\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 142\u001b[0;31m                         raise NotImplementedError(\n\u001b[0m\u001b[1;32m    143\u001b[0m                             \u001b[0;34m\"Unable to automatically determine as_dict \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    144\u001b[0m                             \u001b[0;34m\"format from class. MSONAble requires all \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNotImplementedError\u001b[0m: Unable to automatically determine as_dict format from class. MSONAble requires all args to be present as either self.argname or self._argname, and kwargs to be present undera self.kwargs variable to automatically determine the dict format. Alternatively, you can implement both as_dict and from_dict."
+     ]
+    }
+   ],
+   "source": [
+    "elfcar_dict['TiC'].as_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
